# osa_control

./: CMakeLists.txt  package.xml
action/: PlaySequence.action
bag/: imuRawToShoulder_1.bag
bag/arm/: imuRawToShoulder_1.bag
cfg/: hsa_balance_dyn.cfg  motor_dyn_config.cfg
include/: robotDefines.h  robot_defines.h
include/osa_control/: command_builder.h  command_filter.h  play_sequence_action_client.h
launch/: BiBot1.launch  Launch_BiBot1  bibot1.launch  bibot_balance.launch  hsa_balance.launch  i2c_arm.launch  tank_drive.launch
src/: airp1_arm_test.cpp  armManual.cpp  arm_manual.cpp  arm_transform.cpp  bagRecorderMotion.cpp  bag_exporter.cpp  bag_modifier.cpp  bag_recorder.cpp  bag_recorder_motion.cpp  baseTestModes.cpp  base_test_modes.cpp  commandBuilder.cpp  command_builder.cpp  command_builder_old.cpp  command_builder_test.cpp  command_filter.cpp  hsa_balance.cpp  joystick_action_client.cpp  mobileBaseFollower.cpp  mobileBaseManual.cpp  mobile_base_follower.cpp  mobile_base_manual.cpp  play_sequence_action_client.cpp  play_sequence_action_server.cpp  r2p_arm_test.cpp  tank_drive.cpp  xBoxJoyConductor.cpp  xbox_joy_conductor.cpp
src/android_device/: tablet_command.cpp
srv/: getAllCurrentCmd.srv  getHeadPositionCmd.srv  getSlaveCmdArray.srv  getSlaveCurrentCmd.srv  getSlaveLockCmd.srv
